objects/ssot__LoyaltyProgramPartner__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Program Partner Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPartnerCategoryId__c</fullName>
        <label>Loyalty Partner Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPartnerStatusId__c</fullName>
        <label>Loyalty Partner Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPartnerTypeId__c</fullName>
        <label>Loyalty Partner Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramId__c</fullName>
        <label>Loyalty Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartnerAccountId__c</fullName>
        <label>Partner Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartnerIndustryId__c</fullName>
        <label>Partner Industry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartnershipEndDate__c</fullName>
        <label>Partnership End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartnershipStartDate__c</fullName>
        <label>Partnership Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761152090_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_LoyaltyProgramPartner_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_LoyaltyProgramPartner_rel</relationshipLabel>
        <relationshipName>rel_1697761152090_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761176803_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual_Id_map_LoyaltyProgramPart_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Individual_Id_map_LoyaltyProgramPart_rel</relationshipLabel>
        <relationshipName>rel_1697761176803_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761183926_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramPartner_LoyaltyProgram_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramPartner_LoyaltyProgram_rel</relationshipLabel>
        <relationshipName>rel_1697761183926_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>